Remove z-index from sidebar, it's no longer necessary

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -561,7 +561,6 @@ figure figcaption p {
   background: #eae9ec;
   position: sticky;
   padding: 2rem 1.5rem;
-  z-index: -1;
 }
 
 .work-single blockquote {
